--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.1",
     "uuidv4": "^6.2.5",
