--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "final-form": "^4.20.1",
     "flexboxgrid": "^6.3.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
@@ -23,6 +24,7 @@
     "react-bootstrap": "^1.4.0",
     "react-bottom-scroll-listener": "^4.1.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "react-flexbox-grid": "^2.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
